fix titles getting cutoff

--- a/less/topic.less
+++ b/less/topic.less
@@ -11,7 +11,7 @@
 			word-wrap: break-word;
 			font-size: 28px;
 			color:inherit;
-			line-height: 32px;
+			line-height: 36px;
 			overflow: hidden;
 		}
 
